# racepump

./: .cleanup-drizzle.sh  .env.example  .env.production.example  .gitignore  .replit  .replitignore  Anchor.toml  CLEANUP_SUMMARY.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_BLACK_SCREEN_FIX.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOY_CHECKLIST_FINAL.md  DEPLOY_FIXED.md  DEPLOY_NOW.md  FIX_JUPITER_SWAP_RENT.md  FIX_PERSISTENT_DATABASE.md  GIT_HISTORY_CLEANUP_GUIDE.md  LEADERBOARD_FIX_SUMMARY.md  MEME_REWARD_FEATURE.md  NOTES.md  PERSISTENCE_UPGRADE_SUMMARY.md  PHANTOM_DAPP_REVIEW_SUBMISSION.md  POSTGRES_ONLY_MODE_STATUS.md  POSTGRES_TRANSITION_COMPLETE.md  PUBLIC_RELEASE_PREPARATION.md  QUICK_START.md  RACESWAP-DEPLOYMENT.md  README.md  README_FRESH_REPO.md  REPLIT_SHELL_COMMANDS.md  ROLLBACK_FIX_SUMMARY.md  USDC_LEFTOVER_ISSUE.md  V2_INTEGRATION_COMPLETE.md  V2_SIZE_LIMITATION_FINDINGS.md  V3_DEPLOYMENT_GUIDE.md  V3_STATUS.md  check-db-setup.sh  check-tx-status.mjs  (+24 more)
.deploy/: regenerate-keypair.js  regenerate-keypair.mjs
attached_assets/: Pasted--10-26-02-56-13-14-178cab74-System-starting-up-user-application-2025-10-26-02-56-13-15-178cab74-1761472971363_1761472971364.txt  Pasted--2025-10-30-22-41-57-89-ef761dea-User-Attempt-1-3-for-batch-1-2025-10-30-22-41-57-89-ef761d-1761889397261_1761889397261.txt  (+63 more)
client/: index.html
programs/raceswap/: Cargo.toml
programs/raceswap-v3/: Cargo.toml
programs/raceswap-v3/src/: lib.rs
programs/raceswap/src/: lib.rs  lib_v1_broken.rs  lib_v2_simple.rs
programs/raceswap/tests/: encoder_v1_old.rs.bak
(+246 files in other folders)
