[workspace]
members = [
    "programs/raceswap",
    "programs/raceswap-v3"
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.17"
thiserror = "1.0"

[profile.release]
overflow-checks = true
